checkout everything in actions

--- a/.github/workflows/leaves_pr.yaml
+++ b/.github/workflows/leaves_pr.yaml
@@ -9,6 +9,8 @@ jobs:
     name: Validate pending leaves
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Leaf validator step
       id: leaf_validator
       uses: AlCutter/trillian-examples/serverless/deploy/github/leaf_validator@serverless_leaf_validator
